# mxeval

./: pyproject.toml
data/multilingual_humaneval/: HumanEval_kotlin_jb.jsonl  metadata.json
